fix: align glass panel on auth pages with the rest

--- a/src/components/authentication/styles/login.scss
+++ b/src/components/authentication/styles/login.scss
@@ -1,5 +1,6 @@
 .login {
   //display: flex;
+  min-height: 100vh;
   width: 100%;
   height: auto;
   background-image: url("../../../../public/images/home-page.png");
@@ -9,8 +10,9 @@
     padding: 31px 45px 32px 35px;
     display: flex;
     border-radius: 50px;
-    background-image: url("../../../../public/images/glass-auth-bg.png");
-    background-size: 100% 100%;
+    background-image: url("../../../../public/images/glass-image.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
     flex-wrap: wrap;
     overflow: hidden;
   }
@@ -263,7 +265,7 @@
   font-size: 22px;
   line-height: 26px;
   /* identical to box height */
-  
+
   color: #E7D7A7;
   margin-bottom: 42px;
 }
@@ -596,7 +598,7 @@
   font-size: 22px;
   line-height: 26px;
   /* identical to box height */
-  
+
   color: #E7D7A7;
   margin-bottom: 54px;
 }
@@ -735,7 +737,7 @@
 
             &-description {
                 width: 100%;
-                padding: 0 20px;                
+                padding: 0 20px;
                 h1 {
                     font-size: 64px;
                     margin-bottom: 24px;
@@ -794,7 +796,7 @@
                       font-weight: 500;
                       font-size: 14px;
                       line-height: 16px;
-                      
+
                       color: #E7D7A7;
                     }
                 }
@@ -831,7 +833,7 @@
         gap: 64px;
         font-weight: 700;
         color: #3E3E36;
-    
+
         margin-bottom: 24px;
         &__links-list {
             display: none;
@@ -873,14 +875,14 @@
                 margin-right: 32px;
             }
         }
-    
+
         &__active-tab {
             background-color: #3E3E36;
             color: #E2DBBF;
             padding: 16px 36px;
             border-radius: 50px;
         }
-    
+
         &__logo {
             display: flex;
             &-text {
